<resources>
    <!-- Various universal strings -->
    <string name="app_name">bangk_android_prototype</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_generic">GenericActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_toolbar_title">Toolbar Title</string>

    <!-- Welcome activity strings -->
    <string name="welcome_card_number_label">Card Number:</string>
    <string name="welcome_password_label">Password:</string>
    <string name="welcome_help_link"><u>Forgot Password?</u></string>
    <string name="welcome_signin_button_text">Sign In</string>
    <string name="welcome_title_text">Bank of Agriculture</string>
    <string name="welcome_register_button_text">Register Card</string>
    <string name="welcome_pwd_help">To reset your password, please call the Bank of Agriculture customer support at 1–800-275-4342.</string>
    <string name="welcome_signup_help">To register a new card for online banking, please call the Bank of Agriculture customer support at 1–800-275-4342.</string>
    <string name="welcome_pwd_no_cn">Please enter a card number.</string>
    <string name="welcome_cn_no_pwd">Please enter a password.</string>
    <string name="welcome_no_cn_no_pwd">Please enter a card number and password to sign in.</string>

    <!-- View accounts strings -->
    <string name="view_accounts_title">Your Accounts</string>

    <!-- Account details strings -->
    <string name="ad_transaction_title">Recent Transactions</string>

    <!-- Transfer View strings -->
    <string name="transfer_from_title_text">From Account:</string>
    <string name="transfer_acct_type_title_text">Transfer to where?</string>
    <string name="transfer_to_acct_title_text">To Account:</string>
    <string name="transfer_your_account_rb_text">Your Accounts</string>
    <string name="transfer_other_acct_rb_text">External Account</string>
    <string name="transfer_external_acct_title_text">To External Account:</string>
    <string name="transfer_cancel_button_text">Cancel</string>
    <string name="transfer_confirm_button_text">Confirm</string>
    <string name="transfers_amt_label_text">Amount:</string>
    <string name="transfer_etransfer_text"><u>Interact E-Transfer</u></string>
    <string name="transfer_wu_text"><u>Western Union Money Transfer</u></string>
    <string name="title_activity_maps">Map</string>

</resources>
